v3.9 (unreleased)
    * Split sender into both sendmail's -F and -f.
    * Fix an error with SMTPConnectionError inhertence order ("does not take keyword arguments").
    * Add a new `smtp-ssl-protocol` setting, to select acceptable protocols for SMTP connections.
    * Fix non-compliant User-Agent header for HTTP/1.1.
    * Fix an error in the NoToEmailAddress invocation.
    * Add a new `trust-link` setting, to prefer the `link` attribute over the `id` attribute for identifying entries.

v3.8 (2014-01-18)
    * Sluggify feed names on opmlimport.
    * Allow Unicode letters and digits in feed names, instead of just ASCII lettters and digits.

v3.7 (2013-10-11)
    * Fix fallback for titles that contain malformed HTML.
    * Fix atomic saves to avoid garbling config and data files if the disk is full.
    * Convert the `friendly-name` boolean to the new `name-format` setting.  This allow users to customize how the friendly name is constructed.
    * Demote guessed encodings logs from 'error' to 'warning'.

v3.6 (2013-09-09)
    * Fix missing port argument for IMAPAuthenticationError.
    * Fix `<div id="entry>` syntax error in HTML mail.

v3.5 (2013-06-05)
    * Added digest generation and post-processing hooks.
    * Fix html2text configuration (ignored since 2012-10-04).
    * Fix opmlexport crash due to orphaned feed data.
    * Use feed names in OPML 'text' attributes.

v3.4 (2013-05-14)
    * Added post-processing hooks for user-specified message manipulation.
    * Added settings for IMAP delivery.  The old `use-smtp` boolean has been replaced by a new `email-protocol` setting.  Non-IMAP users should adjust their configuration to set `email-protocol` to either `sendmail` or `smtp`.

v3.3 (2013-04-13)
    * Fix SMTP message submission logic.
    * Fix error inheritence (super() calls).
    * Convert html2text parsing errors to `ProcessingError`s.
    * Cleanup html2text error handling.
    * Drop Google Reader rel-via manipulation.