@@ -1,4 +1,5 @@
 v3.9 (unreleased)
+    * Catch and error out if a user adds a feed with a duplicate name.
     * Split sender into both sendmail's -F and -f.
     * Fix an error with SMTPConnectionError inhertence order ("does not take keyword arguments").
     * Add a new `smtp-ssl-protocol` setting, to select acceptable protocols for SMTP connections.
